<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#200000FF"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mon"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/mon_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tue"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/tue_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wed"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/wed_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/thu"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/thu_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fri"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/fri_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sat"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/sat_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sun"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/sun_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mon"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/mon_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tue"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/tue_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wed"
                    android:gravity="center"></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/weather"
                    android:layout_weight="1"></ImageView>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/wed_details"
                    android:gravity="left"></TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>